syntax = "proto3";

package build.stack.fortune;

message PredictionRequest {
}

message PredictionResponse {
    string message = 1;
}

service FortuneTeller {
    rpc Predict(PredictionRequest) returns (PredictionResponse);
}